# Minecraft_vk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  config.ini  main.cpp
Graphic/Vulkan/: BufferMeta.cpp  BufferMeta.hpp  CMakeLists.txt  ImageMeta.cpp  ImageMeta.hpp  QueueFamilyManager.cpp  QueueFamilyManager.hpp  VulkanAPI.cpp  VulkanAPI.hpp  VulkanAPI_Impl.hpp
Graphic/Vulkan/Pipeline/: CMakeLists.txt  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanPipelineCreate_Impl.hpp  VulkanShader.cpp  VulkanShader.hpp
Include/: CMakeLists.txt  GLM.hpp  GlobalConfig.hpp  GraphicAPI.cpp  imgui_include.hpp  stb_image.h  stb_image_Impl.cpp  vk_mem_alloc.h  vk_mem_alloc_impl.cpp
Include/Noise/: FastNoiseLite.hpp
Minecraft/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp  Minecraft.cpp  Minecraft.hpp
Minecraft/Application/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp
Minecraft/Application/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
Minecraft/Application/Input/: CMakeLists.txt  UserInput.cpp  UserInput.hpp
Minecraft/Block/: Block.cpp  Block.hpp  BlockTexture.cpp  BlockTexture.hpp  CMakeLists.txt
Minecraft/Entity/: CMakeLists.txt  CameraEntity.cpp  CameraEntity.hpp  Entity.cpp  Entity.hpp  PawnEntity.cpp  PawnEntity.hpp
Minecraft/Entity/Player/: CMakeLists.txt  Player.cpp  Player.hpp
Minecraft/Internet/: CMakeLists.txt
Minecraft/Internet/MinecraftServer/: CMakeLists.txt  MinecraftServer.cpp  MinecraftServer.hpp
Minecraft/Player/: CMakeLists.txt  Player.cpp  Player.hpp
Minecraft/World/: CMakeLists.txt  MinecraftWorld.cpp  MinecraftWorld.hpp
Minecraft/World/Biome/: BiomeSettings.hpp
Minecraft/World/Chunk/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkCache.cpp  ChunkCache.hpp  ChunkPool.cpp  ChunkPool.hpp  ChunkPoolType.hpp  ChunkRenderBuffers.cpp  ChunkRenderBuffers.hpp  ChunkRenderBuffers_Impl.hpp  ChunkStatus.hpp  RenderableChunk.cpp  RenderableChunk.hpp  WorldChunk.cpp  WorldChunk.hpp  WorldChunk_Impl.hpp
Minecraft/World/Chunk/Structure/: Structure.hpp  StructureTree.cpp  StructureTree.hpp
Minecraft/World/Generation/: CMakeLists.txt  MinecraftNoise.cpp  MinecraftNoise.hpp
Minecraft/World/Generation/Structure/: CMakeLists.txt  Structure.cpp  Structure.hpp  StructureAbandonedHouse.cpp  StructureAbandonedHouse.hpp  StructureCave.cpp  StructureCave.hpp  StructureGroup.cpp  StructureGroup.hpp  StructurePieces.cpp  StructurePieces.hpp  StructureTree.cpp  StructureTree.hpp
Minecraft/World/Physics/: CMakeLists.txt
Minecraft/World/Physics/Box/: AABB.hpp
Minecraft/World/Physics/Ray/: CMakeLists.txt  Raycast.cpp  Raycast.hpp  RaycastType.hpp
Minecraft/util/: MinecraftConstants.hpp  MinecraftType.h  Tickable.hpp
Resources/Shader/: vertex_buffer.frag  vertex_buffer.vert
Resources/Texture/: texture.json
Utility/: CMakeLists.txt  Logger.cpp  Logger.hpp  MSVC.hpp  Singleton.hpp  Timer.hpp  Type.hpp
Utility/Animation/: Animation.cpp  Animation.hpp  AnimationLinear.cpp  AnimationLinear.hpp  CMakeLists.txt
Utility/ImguiAddons/: CMakeLists.txt  CurveEditor.cpp  CurveEditor.hpp
Utility/Math/: Math.hpp
Utility/Profiler/: Profilable.hpp
Utility/Resources/: CMakeLists.txt  Caches.cpp  Caches.hpp
Utility/String/: StringConcatConstexpr.hpp
Utility/Thread/: CMakeLists.txt  MutexResources.hpp  ThreadPool.cpp  ThreadPool.hpp
Utility/Vulkan/: CMakeLists.txt  ValidationLayer.cpp  ValidationLayer.hpp  VulkanExtension.cpp  VulkanExtension.hpp
Vulkan/: CMakeLists.txt  GraphicAPI.hpp  MainApplication.cpp  MainApplication.hpp
Vulkan/Pipeline/: CMakeLists.txt  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanShader.cpp  VulkanShader.hpp
